<resources>
    <string name="app_name">seeking-shelter</string>
    <string name="call">Call</string>
    <string name="cities">Cities</string>
    <string name="contact">Contact Us</string>
    <string name="directions">Directions</string>
    <string name="donate">Donate</string>
    <string name="donate_url">https://www.gofundme.com/homelessnomoreapp</string>
    <string name="email">Email Us</string>
    <string name="email_subject">Inquiry From Seeking Shelter Android App</string>
    <string name="facebook_url">https://www.facebook.com/Seeking-Shelter-1802391203381676/</string>
    <string name="info_window_prompt">Click window to view details</string>
    <string name="instagram_url">https://www.instagram.com/seekingshelter24/</string>
    <string name="listings">Our Cities</string>
    <string name="map">Near Me</string>
    <string name="site_email">seekingshelter24@gmail.com</string>
    <string name="site_url">https://www.seekingshelter.net/</string>
    <string name="visit_facebook">Visit Facebook</string>
    <string name="visit_instagram">Visit Instagram</string>
    <string name="visit_website">Visit Website</string>
    <string name="resources">Resources</string>
    <string name="domesticViolence">National Domestic Violence Hotline</string>
    <string name="sexualAssault">Sexual Assault Hotline</string>
    <string name="childAbuse">Child Abuse Hotline</string>
    <string name="trevorHotline">Trevor Hotline (LGBTQ Youth Suicide)</string>
    <string name="missingChild">Missing Child Hotline</string>
    <string name="drugAbuse">Drug Abuse Hotline</string>
    <string name="runawayHotline">National Runaway Hotline</string>
    <string name="youthCrisis">Youth Crisis Hotline</string>
    <string name="suicide">National Suicide Hotline</string>
    <string name="elderAbuse">Elder Abuse Hotline</string>

</resources>
